# LudumDare55

./: .gitignore  Cargo.toml  index.html
assets/: Background.xcf  Cover.xcf  Narration.xcf  ScrollBack.xcf  ScrollSide.xcf  Summon.xcf  Tiles.xcf  Title.xcf  story.teller
assets/brains/: construct.brain  death.brain  demon.brain  draining.brain  elemental_buff_death.brain  evading.brain  evading_debuff_nearest.brain  evading_prioritized.brain  fighter.brain  fighter_prioritized.brain  large_construct.brain  necromancer.brain
assets/dynamic/: summons.asset_arrays.ron
assets/npc/: Bones.summon  Death.summon  Necromancer.summon  Pain.summon
assets/sheets/: game_over.css  help.css  loot.css  main_menu.css  narration.css  summon_button.css  summon_scroll.css
assets/summons/: Bane.summon  Brutalizer.summon  Butcher.summon  Cherub.summon  Ember.summon  Feline.summon  Ghost.summon  Ghoul.summon  Golem.summon  Guardian.summon  Pixie.summon  Pylon.summon  Seraph.summon  Undine.summon  Vampire.summon  Virtue.summon  Vulpine.summon  Wisp.summon  Wolfine.summon  angel.summon  skeleton.summon  watcher.summon
assets/waves/: boss0.wave  boss1.wave  wave0.wave  wave1.wave  wave2.wave  wave3.wave  wave4.wave  wave5.wave  wave7.wave  wave8.wave
src/: bindings.rs  board.rs  game.rs  lib.rs  loading.rs  main.rs  menu.rs  prelude.rs  state.rs  summons.rs
src/battle/: bt.rs  loot.rs  mod.rs  runner.rs  stats.rs
src/bt/: mod.rs
src/bt/unpowered/: tree_def.rs
src/bt/unpowered/nodes/: executor.rs  failer.rs  inverter.rs  repeat.rs  selector.rs  sequence.rs  succeeder.rs
src/flow/: game_over.rs  mod.rs  narration.rs  story.rs
src/persistence/: mod.rs  runes.rs  ui.rs
src/summoner/: book.rs  help.rs  mana.rs  mod.rs  placement.rs
